--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -123,8 +123,8 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        echo -e "$(($(nproc) + 1)) thread compile"
-        make -j$(($(nproc) + 1)) || df -Th || make -j1 || make -j1 V=s
+        echo -e "$(($(nproc) + 2)) thread compile"
+        make -j$(($(nproc) + 2)) || make -j1 V=s || make -j1
         echo "build_tag=openwrt_armvirt_v8_$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
         echo "--------------------------硬盘信息--------------------------"
