--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -53,7 +53,13 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        # 清理多余文件，腾出磁盘空间
+        docker rmi `docker images -q`
+        sudo -E apt-get remove -y --purge azure-cli docker* ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* php* mysql* mssql-tools msodbcsql17 snap* aspnetcore android*
         sudo rm -rf /swapfile /etc/apt/sources.list.d /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android 2>/dev/null
+        echo "--------------------------硬盘信息--------------------------"
+        echo "硬盘详情："
+        df -Th
         sudo -E apt-get -qq -y update
         # sudo -E apt-get -qq -y install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo -E apt-get -qq -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
@@ -63,13 +69,13 @@ jobs:
         sudo -E systemctl daemon-reload
         sudo -E apt-get -qq -y autoremove --purge
         sudo -E apt-get -qq clean
+        echo "--------------------------硬盘信息--------------------------"
+        echo "硬盘详情："
+        df -Th
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
         echo "COMPILE_STARTINGTIME=$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
-        # 清理多余文件，腾出磁盘空间
-        docker rmi `docker images -q`
-        sudo -E apt-get remove -y --purge azure-cli docker* ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* php* mysql* mssql-tools msodbcsql17 snap* aspnetcore android*
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘详情："
         df -Th
