--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -24,8 +24,8 @@ env:
 
 jobs:
   build:
-    # runs-on: ubuntu-22.04
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    # runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
@@ -63,9 +63,10 @@ jobs:
         sudo -E apt-get -qq -y update
         # sudo -E apt-get -qq -y install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo -E apt-get -qq -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
-        sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk \
-        gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-        python3-distutils rsync subversion unzip zlib1g-dev file wget
+        sudo -E apt-get -qq install -y $(curl -fsSL https://is.gd/depend_ubuntu2204_openwrt)
+        # sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk \
+        # gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+        # python3-distutils rsync subversion unzip zlib1g-dev file wget
         sudo -E systemctl daemon-reload
         sudo -E apt-get -qq -y autoremove --purge
         sudo -E apt-get -qq clean
