--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -63,7 +63,7 @@ jobs:
         # sudo -E apt-get -y install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo -E apt-get -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
         sudo -E apt-get install -y build-essential clang flex bison g++ gawk \
-        gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+        gcc-multilib g++-multilib gettext git libfuse-dev libncurses-dev libssl-dev \
         python3-distutils rsync subversion unzip zlib1g-dev file wget
         sudo -E systemctl daemon-reload
         sudo -E apt-get -y autoremove --purge
