--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -13,9 +13,9 @@ on:
   workflow_dispatch:
 
 env:
-  # REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/coolsnowwolf/lede
   # REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_URL: https://github.com/openwrt/openwrt.git
+  # REPO_URL: https://github.com/openwrt/openwrt.git
   # REPO_BRANCH: master
   REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
