--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -16,8 +16,8 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   # REPO_URL: https://github.com/immortalwrt/immortalwrt
   # REPO_URL: https://github.com/openwrt/openwrt.git
-  # REPO_BRANCH: master
-  REPO_BRANCH: main
+  REPO_BRANCH: master
+  # REPO_BRANCH: main
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
